fix: margin bottom on mobile

--- a/src/styles/components/online-control.scss
+++ b/src/styles/components/online-control.scss
@@ -1,4 +1,5 @@
 .online-control {
+  margin-bottom: re-c(80);
   background-color: var(--color-background-block);
 
   &__description {
